--- a/.github/workflows/image.yaml
+++ b/.github/workflows/image.yaml
@@ -2,7 +2,7 @@ name: build
 
 on:
   push:
-    branches: [main, dev]
+    branches: [main, dev, dev-reuse]
 jobs:
   build:
     runs-on: ubuntu-latest
